[package]
name = "hangman-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
clap_allgen = "0.2.1"
fern = { version = "0.7.0", features = ["colored"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
log = { version = "0.4.22", features = ["std"] }
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
